Tweaks to styling to ensure it all plays nice with new dark mode.

--- a/src/openssf-dashboard/account-view/account-view.component.scss
+++ b/src/openssf-dashboard/account-view/account-view.component.scss
@@ -122,10 +122,10 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            border: #ccc 1px solid;
             border-radius: 4px;
             padding: .5rem;
             font-size: .9rem;
+            border: var(--default-border);
             box-shadow: var(--default-box-shadow);
 
             osd-loading {
