--- a/src/openssf-dashboard/shared/popups/error-popup/error-popup.component.scss
+++ b/src/openssf-dashboard/shared/popups/error-popup/error-popup.component.scss
@@ -15,6 +15,12 @@
     h1 {
       margin: 1rem 0 0 0;
     }
+
+    p {
+      font-size: 1rem;
+      margin: .5rem 0 0 0;
+      opacity: .7;
+    }
   }
 
   .body {
@@ -23,7 +29,7 @@
   }
 
   .actions {
-    background-color: #efefef;
+    background-color: var(--ui-secondary-color);
     padding: 1rem;
   }
 }
